--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 fastapi = {extras = ["all"], version = "^0.103.1"}
+alembic = "^1.12.0"
+asyncpg = "^0.28.0"
 
 
 [build-system]
